--- a/final/style.css
+++ b/final/style.css
@@ -245,7 +245,7 @@ header p {
 footer {
   text-align: center;
   padding: 1.5rem 0;
-  background: #283e78;
+  background: #0e0e0f;
   color: white;
   font-size: 0.9rem;
   margin-top: 2rem;
