--- a/lecture/submit/main.css
+++ b/lecture/submit/main.css
@@ -1,11 +1,10 @@
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
- body {
-            display: flex;
-            justify-content: center; /* center alignment */
-            align-items: center; /* center alignment */
-            flex-direction: column; /* vertical arrangement */
-
-            height: 100vh; /* full viewport height (important for centering) */
-            margin: 0px;
-            padding: 0px; 
- }
+    height: 100vh;
+    margin: 0px;
+    padding: 0px;
+}
